--- a/us.html
+++ b/us.html
@@ -112,98 +112,86 @@
           </button>
         </div>
         <div class="col-md-4"></div>
-        <div class="row">
-          <div class="col-md-4">
-            <img
-              src="images/avatar.png"
-              alt="REDSKY ACTOR/CHOREOGRAPHER"
-              width="200"
-            />
-            <p class="us-team">TJ</p>
-            <button type="button" class="btn btn-secondary btn-sm mb-3">
-              Read more
-            </button>
-          </div>
-          <div class="col-md-4">
-            <img src="images/avatar.png" alt="REDSKY COO" width="200" />
-            <p class="us-team">Michael</p>
-            <button type="button" class="btn btn-secondary btn-sm mb-3">
-              Read more
-            </button>
-          </div>
-          <div class="col-md-4">
-            <img
-              src="images/avatar.png"
-              alt="REDSKY Web Developer/Co-founder"
-              width="200"
-            />
-            <p class="us-team">Jay Apirinn</p>
-            <button type="button" class="btn btn-secondary btn-sm mb-3">
-              Read more
-            </button>
-          </div>
-          <div class="row">
-            <div class="col-md-4">
-              <img src="images/avatar.png" alt="REDSKY Co-writer" width="200" />
-              <p class="us-team">Raj</p>
-              <button type="button" class="btn btn-secondary btn-sm mb-3">
-                Read more
-              </button>
-            </div>
-            <div class="col-md-4">
-              <img src="images/avatar.png" alt="REDSKY Assistant" width="200" />
-              <p class="us-team">Noa</p>
-              <button type="button" class="btn btn-secondary btn-sm mb-3">
-                Read more
-              </button>
-            </div>
-            <div class="col-md-4">
-              <img
-                src="images/avatar.png"
-                alt="REDSKY Casting Agent"
-                width="200"
-              />
-              <p class="us-team">Antonio</p>
-              <button type="button" class="btn btn-secondary btn-sm mb-3">
-                Read more
-              </button>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-4">
-              <img
-                src="images/avatar.png"
-                alt="REDSKY Actorscout"
-                width="200"
-              />
-              <p class="us-team">Paul</p>
-              <button type="button" class="btn btn-secondary btn-sm mb-3">
-                Read more
-              </button>
-            </div>
-            <div class="col-md-4">
-              <img
-                src="images/avatar.png"
-                alt="REDSKY Sound engineer"
-                width="200"
-              />
-              <p class="us-team">Kevin</p>
-              <button type="button" class="btn btn-secondary btn-sm mb-3">
-                Read more
-              </button>
-            </div>
-            <div class="col-md-4">
-              <img
-                src="images/avatar.png"
-                alt="REDSKY Photographer"
-                width="200"
-              />
-              <p class="us-team">Carmen</p>
-              <button type="button" class="btn btn-secondary btn-sm mb-3">
-                Read more
-              </button>
-            </div>
-          </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <img
+            src="images/avatar.png"
+            alt="REDSKY ACTOR/CHOREOGRAPHER"
+            width="220"
+          />
+          <p class="us-team mt-2">TJ</p>
+          <button type="button" class="btn btn-secondary btn-sm mb-5">
+            Read more
+          </button>
+        </div>
+        <div class="col-md-4">
+          <img src="images/avatar.png" alt="REDSKY COO" width="220" />
+          <p class="us-team mt-2">Michael</p>
+          <button type="button" class="btn btn-secondary btn-sm mb-5">
+            Read more
+          </button>
+        </div>
+        <div class="col-md-4">
+          <img
+            src="images/avatar.png"
+            alt="REDSKY Web Developer/Co-founder"
+            width="220"
+          />
+          <p class="us-team mt-2">Jay Apirinn</p>
+          <button type="button" class="btn btn-secondary btn-sm mb-5">
+            Read more
+          </button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <img src="images/avatar.png" alt="REDSKY Co-writer" width="220" />
+          <p class="us-team mt-2">Raj</p>
+          <button type="button" class="btn btn-secondary btn-sm mb-5">
+            Read more
+          </button>
+        </div>
+        <div class="col-md-4">
+          <img src="images/avatar.png" alt="REDSKY Assistant" width="220" />
+          <p class="us-team mt-2">Noa</p>
+          <button type="button" class="btn btn-secondary btn-sm mb-5">
+            Read more
+          </button>
+        </div>
+        <div class="col-md-4">
+          <img src="images/avatar.png" alt="REDSKY Casting Agent" width="220" />
+          <p class="us-team mt-2">Antonio</p>
+          <button type="button" class="btn btn-secondary btn-sm mb-5">
+            Read more
+          </button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <img src="images/avatar.png" alt="REDSKY Actorscout" width="220" />
+          <p class="us-team mt-2">Paul</p>
+          <button type="button" class="btn btn-secondary btn-sm mb-5">
+            Read more
+          </button>
+        </div>
+        <div class="col-md-4">
+          <img
+            src="images/avatar.png"
+            alt="REDSKY Sound engineer"
+            width="220"
+          />
+          <p class="us-team mt-2">Kevin</p>
+          <button type="button" class="btn btn-secondary btn-sm mb-5">
+            Read more
+          </button>
+        </div>
+        <div class="col-md-4">
+          <img src="images/avatar.png" alt="REDSKY Photographer" width="220" />
+          <p class="us-team">Carmen</p>
+          <button type="button" class="btn btn-secondary btn-sm mb-5">
+            Read more
+          </button>
         </div>
       </div>
     </div>
