--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
       </div>
     </nav>
     <div class="contact-container container">
-        <div class="content mt-3">
+        <div class="contact-content mt-3">
         <h1 class="work-projects">
         <img src="images/about.png" alt="REDSKY Logo" width="150" />
       </h1>
