added target on social links

--- a/work.html
+++ b/work.html
@@ -202,29 +202,35 @@
         </div>
       </div>
     </div>
-    <div class="footer-work-page">
-      <footer>
-        <div class="social-media">
-          <div class="d-flex justify-content-evenly">
-            <a
-              href="https://www.instagram.com/redsky.no/"
-              class="bt btn-branding"
-              title="REDSKY Instagram"
-            >
-              <i class="fa-brands fa-2x fa-instagram"></i>
-            </a>
-            <a
-              href="https://www.linkedin.com/in/redsky/"
-              title="REDSKY LinkedIn"
-            >
-              <i class="fa-brands fa-2x fa-linkedin"></i>
-            </a>
-            <a href="" title="REDSKY X">
-              <i class="fa-brands fa-2x fa-x-twitter"></i>
-            </a>
-          </div>
+    <footer>
+      <div class="social-media">
+        <div>
+          <p class="follow-us" title="Follow us">Follow us</p>
         </div>
-      </footer>
-    </div>
+        <div class="d-flex justify-content-center">
+          <a
+            href="https://www.instagram.com/redsky.no/"
+            target="_blank"
+            class="bt btn-branding"
+            title="REDSKY Instagram"
+          >
+            <i class="fa-brands fa-2x fa-instagram"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/redsky/"
+            target="_blank"
+            title="REDSKY LinkedIn"
+          >
+            <i class="fa-brands fa-2x fa-linkedin"></i>
+          </a>
+          <a href="" target="_blank" title="REDSKY X">
+            <i class="fa-brands fa-2x fa-x-twitter"></i>
+          </a>
+          <a href="" target="_blank" title="Redsky Facebook">
+            <i class="fa-brands fa-2x fa-facebook-f"></i>
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
