--- a/about.html
+++ b/about.html
@@ -110,18 +110,23 @@
         <div class="d-flex justify-content-center">
           <a
             href="https://www.instagram.com/redsky.no/"
+            target="_blank"
             class="bt btn-branding"
             title="REDSKY Instagram"
           >
             <i class="fa-brands fa-2x fa-instagram"></i>
           </a>
-          <a href="https://www.linkedin.com/in/redsky/" title="REDSKY LinkedIn">
+          <a
+            href="https://www.linkedin.com/in/redsky/"
+            target="_blank"
+            title="REDSKY LinkedIn"
+          >
             <i class="fa-brands fa-2x fa-linkedin"></i>
           </a>
-          <a href="" title="REDSKY X">
+          <a href="" target="_blank" title="REDSKY X">
             <i class="fa-brands fa-2x fa-x-twitter"></i>
           </a>
-          <a href="" title="Redsky Facebook">
+          <a href="" target="_blank" title="Redsky Facebook">
             <i class="fa-brands fa-2x fa-facebook-f"></i>
           </a>
         </div>
