removed personal number

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
       <h3>Email contact</h3>
       <p class="ceo-contact">Mats Bjørseth <a href="mailto:mats86@live.no" title="Email Mats Bjørseth">mats86@live.no</a></p>
       <h3>Telephone number</h3>
-      <p class="ceo-number">+47 952 05 161</p>
+      <p class="ceo-number">TBA</p>
       <div>
         <h3>Our address</h3>
         <img src="images/plaza.sol.5.png" alt="Our office address" width="450">
