removed name on contact, edited css nav bar

--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
         <img src="images/about.png" alt="REDSKY Logo" width="150" />
       </h1>
       <h3>Email contact</h3>
-      <p class="ceo-contact">Mats Bjørseth <a href="mailto:mats86@live.no" title="Email Mats Bjørseth">mats86@live.no</a></p>
+      <p class="ceo-contact"><a href="mailto:mats86@live.no" title="Email Mats Bjørseth">mats86@live.no</a></p>
       <h3>Telephone number</h3>
       <p class="ceo-number">TBA</p>
       <div>
