--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     <title>REDSKY</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+    <nav
+      id="nav-mobile"
+      class="navbar navbar-expand-lg navbar-light bg-transparent"
+    >
       <div class="container-fluid">
         <a class="navbar-brand" href="#"> </a>
         <button
@@ -50,7 +53,11 @@
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon">
-            <i class="fas fa-bars" style="color: #fff; font-size: 28px"></i>
+            <i
+              class="fas fa-bars"
+              id="nav-hamburger"
+              style="color: #fff; font-size: 30px"
+            ></i>
           </span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
