--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <a class="navbar-brand" href="#"> </a>
         <button
           class="navbar-toggler"
+          id="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
