--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <body>
     <nav
       id="nav-mobile"
-      class="navbar navbar-expand-lg navbar-light bg-transparent"
+      class="navbar navbar-expand-lg navbar-light bg-transparent p-4"
     >
       <div class="container-fluid">
         <a class="navbar-brand" href="#"> </a>
@@ -62,7 +62,7 @@
           </span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a
                 class="nav-link active"
@@ -109,7 +109,7 @@
         <img src="images/main.png" class="main-logo" alt="REDSKY logo" />
         <p class="introduction">The official website for REDSKY.no</p>
 
-        <p class="projects">
+        <p class="introduction">
           Upcoming projects by REDSKY will be announced soon.
         </p>
       </div>
