--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         <a class="navbar-brand" href="#"> </a>
         <button
           class="navbar-toggler"
-          id="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
@@ -62,7 +61,7 @@
           </span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a
                 class="nav-link active"
