--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
     <title>REDSKY</title>
   </head>
   <body>
-    <nav
-      id="nav-mobile"
-      class="navbar navbar-expand-lg navbar-light bg-transparent p-4"
-    >
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent p-4">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"> </a>
         <button
@@ -56,7 +53,7 @@
             <i
               class="fas fa-bars"
               id="nav-hamburger"
-              style="color: #fff; font-size: 30px"
+              style="color: #ffff; font-size: 30px; padding-right: 20px"
             ></i>
           </span>
         </button>
