--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <i
               class="fas fa-bars"
               id="nav-hamburger"
-              style="color: #ffff; font-size: 30px; padding-right: 20px"
+              style="color: #ffff; font-size: 30px"
             ></i>
           </span>
         </button>
