edited css and html

--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
       </p>
       </div>
       <footer>
-      <div class="social-media">
+      <div class="social-media-about">
         <div>
           <p class="follow-us" title="Follow us">Follow us</p>
         </div>
