--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
       </div>
     </div>
     <footer>
-      <div class="social-media">
+      <div class="social-media-contact">
         <div>
           <p class="follow-us" title="Follow us">Follow us</p>
         </div>
