--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <title>REDSKY</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent p-4">
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"> </a>
         <button
@@ -111,7 +111,7 @@
       </div>
     </div>
     <footer>
-      <div class="social-media">
+      <div class="social-media-home">
         <div>
           <p class="follow-us" title="Follow us">Follow us</p>
         </div>
