--- a/work.html
+++ b/work.html
@@ -87,11 +87,11 @@
       </div>
     </nav>
     <div class="content-container container text-center">
-      <div class="row">
+      <div class="row" id="work-images">
         <div class="col-sm-4 mb-4">
           <img
             src="images/tangles senses_short.jpg"
-            class="img-fluid"
+            class="img-fluid rounded shadow-sm p-2 border"
             alt="Tangles Senses"
           />
           <h3 class="text-center mb-0">Tangled Senses(short)</h3>
@@ -102,7 +102,7 @@
         <div class="col-sm-4 mb-4">
           <img
             src="images/a_walk_in_the_park.jpg"
-            class="img-fluid"
+            class="img-fluid rounded shadow-sm p-2 border"
             alt="A Walk in the Park"
           />
           <h3 class="text-center mb-0">A Walk In The Park</h3>
@@ -111,21 +111,33 @@
           </button>
         </div>
         <div class="col-sm-4 mb-4">
-          <img src="images/amsterdam.jpg" class="img-fluid" alt="Amsterdam" />
+          <img
+            src="images/amsterdam.jpg"
+            class="img-fluid rounded shadow-sm p-2 border"
+            alt="Amsterdam"
+          />
           <h3 class="text-center mb-0">Amsterdam</h3>
           <button type="button" class="btn btn-secondary btn-sm">
             Read more
           </button>
         </div>
         <div class="col-sm-4 mb-4">
-          <img src="images/bermuda.jpg" class="img-fluid" alt="Bermuda" />
+          <img
+            src="images/bermuda.jpg"
+            class="img-fluid rounded shadow-sm p-2 border"
+            alt="Bermuda"
+          />
           <h3 class="text-center mb-0">Bermuda</h3>
           <button type="button" class="btn btn-secondary btn-sm">
             Read more
           </button>
         </div>
         <div class="col-sm-4 mb-4">
-          <img src="images/grace.jpg" class="img-fluid" alt="Grace" />
+          <img
+            src="images/grace.jpg"
+            class="img-fluid rounded shadow-sm p-2 border"
+            alt="Grace"
+          />
           <h3 class="text-center mb-0">Grace</h3>
           <button type="button" class="btn btn-secondary btn-sm">
             Read more
@@ -134,7 +146,7 @@
         <div class="col-sm-4 mb-4">
           <img
             src="images/misunderstood.jpg"
-            class="img-fluid"
+            class="img-fluid rounded shadow-sm p-2 border"
             alt="Misunderstood"
           />
           <h3 class="text-center mb-0">Misunderstood</h3>
@@ -145,7 +157,7 @@
         <div class="col-sm-4 mb-4">
           <img
             src="images/phillipInes.jpg"
-            class="img-fluid"
+            class="img-fluid rounded shadow-sm p-2 border"
             alt="phillip:Ines"
           />
           <h3 class="text-center mb-0">phillip:Ines</h3>
@@ -154,7 +166,11 @@
           </button>
         </div>
         <div class="col-sm-4 mb-4">
-          <img src="images/sorry.jpg" class="img-fluid" alt="SORRY" />
+          <img
+            src="images/sorry.jpg"
+            class="img-fluid rounded shadow-sm p-2 border"
+            alt="SORRY"
+          />
           <h3 class="text-center mb-0">SORRY</h3>
           <button type="button" class="btn btn-secondary btn-sm">
             Read more
@@ -163,7 +179,7 @@
         <div class="col-sm-4 mb-4">
           <img
             src="images/the Last Man in Laos.jpg"
-            class="img-fluid"
+            class="img-fluid rounded shadow-sm p-2 border"
             alt="The Last Man In Laos"
           />
           <h3 class="text-center mb-0">The Last Man In Laos</h3>
@@ -174,7 +190,7 @@
         <div class="col-sm-4 mb-4">
           <img
             src="images/the Long Way Home.jpg"
-            class="img-fluid"
+            class="img-fluid rounded shadow-sm p-2 border"
             alt="The Long Way Home"
           />
           <h3 class="text-center mb-0">The Long Way Home</h3>
@@ -185,7 +201,7 @@
         <div class="col-sm-4 mb-4">
           <img
             src="images/when are you coming home.jpg"
-            class="img-fluid"
+            class="img-fluid rounded shadow-sm p-2 border"
             alt="When Are You Coming Home"
           />
           <h3 class="text-center mb-0">When Are You Coming Home</h3>
@@ -194,7 +210,11 @@
           </button>
         </div>
         <div class="col-sm-4 mb-4">
-          <img src="images/lollipop.jpg" class="img-fluid" alt="LOLLIPOP" />
+          <img
+            src="images/lollipop.jpg"
+            class="img-fluid rounded shadow-sm p-2 border"
+            alt="LOLLIPOP"
+          />
           <h3 class="text-center mb-0">LOLLIPOP</h3>
           <button type="button" class="btn btn-secondary btn-sm">
             Read more
