--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <title>REDSKY</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+    <nav class="navbar navbar-expand-lg" style="background-color: #ffffff">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"> </a>
+        <a class="navbar-brand" href="#"></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -49,13 +49,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon">
-            <i
-              class="fas fa-bars"
-              id="nav-hamburger"
-              style="color: #ffff; font-size: 30px"
-            ></i>
-          </span>
+          <span class="navbar-toggler-icon"> </span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
