--- a/contact.html
+++ b/contact.html
@@ -70,18 +70,19 @@
         <h1 class="work-projects">
         <img src="images/about.png" alt="REDSKY Logo" width="150" />
       </h1>
+      <div class="contact-info">
       <h3>Email contact</h3>
       <p class="ceo-contact"><a href="mailto:mats86@live.no" title="Email Mats Bjørseth">mats86@live.no</a></p>
       <h3>Telephone number</h3>
-      <p class="ceo-number">TBA</p>
-      <div>
-        <h3>Our address</h3>
-        <img src="images/plaza.sol.5.png" alt="Our office address" width="450">
-        <p class="office-address" title="address">Plaza del Sol 5, 03012 Alicante</p>
-        <p class="office-country">Spain</p>
-
+      <p class="ceo-number">TBA</p> 
+      <h3>Our address</h3>
       </div>
-    </div>
+      <div class="mt-3 mb-4">
+        <img src="images/plaza.sol.5.png" alt="Our office address" width="450">
+      </div>
+     <p class="office-address" title="address">Plaza del Sol 5, 03012 Alicante</p>
+        <p class="office-country">Spain</p>
+      </div>
     <footer>
       <div class="social-media-contact">
         <div>
