--- a/about.html
+++ b/about.html
@@ -24,24 +24,23 @@
     <title>About REDSKY</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+    <nav class="navbar navbar-expand-lg" style="background-color: #000000">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button
-          class="navbar-toggler"
-          type="button"
+          class="navbar-toggler collapsed d-flex d-lg-none flex-coloum justify-content-around"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
           aria-controls="navbarNav"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon">
-            <i class="fas fa-bars" style="color: #fff; font-size: 30px;"></i>
-          </span>
+          <span class="toggler-icon top-bar"></span>
+          <span class="toggler-icon middle-bar"></span>
+          <span class="toggler-icon bottom-bar"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
             </li>
