--- a/index.html
+++ b/index.html
@@ -37,19 +37,20 @@
     <title>REDSKY</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #ffffff">
+    <nav class="navbar navbar-expand-lg" style="background-color: #000000">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button
-          class="navbar-toggler"
-          type="button"
+          class="navbar-toggler collapsed d-flex d-lg-none flex-coloum justify-content-around"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
           aria-controls="navbarNav"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"> </span>
+          <span class="toggler-icon top-bar"></span>
+          <span class="toggler-icon middle-bar"></span>
+          <span class="toggler-icon bottom-bar"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
