--- a/studio.html
+++ b/studio.html
@@ -98,8 +98,8 @@
         </div>
       </div>
     </nav>
-    <div class="content">
-      <img src="images/about.png" alt="REDSKY About logo" width="150" />
+    <div class="content mt-5">
+      <img src="images/about.png" alt="REDSKY About logo" width="200" />
       <div class="studio-images">
         <img src="images/studio.jpg" class="img-fluid" alt="Studio Photo 1" />
         <img src="images/studio3.jpg" class="img-fluid" alt="Studio Photo 2" />
