--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
     <div class="content-container container">
       <div class="content">
         <h1>
-          <img src="images/about.png" alt="REDSKY About logo" width="150" />
+          <img class="logo" src="images/about.png" alt="REDSKY About logo" width="200" />
         </h1>
       </div>
     <div class="about-container container">
