--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
           <span class="toggler-icon bottom-bar"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav justify-content-center">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
             </li>
@@ -76,7 +76,7 @@
       <h3>Our address</h3>
       </div>
       <div class="mt-3 mb-4">
-        <img src="images/plaza.sol.5.png" alt="Our office address" width="450">
+        <img src="images/plaza.sol.5.png" alt="Our office address" width="600">
       </div>
      <p class="office-address" title="address">Plaza del Sol 5, 03012 Alicante</p>
         <p class="office-country">Spain</p>
