--- a/us.html
+++ b/us.html
@@ -56,7 +56,7 @@
           <span class="toggler-icon bottom-bar"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav justify-content-center">
             <li class="nav-item">
               <a
                 class="nav-link active"
@@ -115,7 +115,7 @@
       <div class="row">
         <div class="col-md-4">
           <img
-            src="images/avatar.png"
+            src="images/tj.jpeg"
             alt="REDSKY ACTOR/CHOREOGRAPHER"
             width="220"
           />
