--- a/work.html
+++ b/work.html
@@ -43,7 +43,7 @@
           <span class="toggler-icon bottom-bar"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav justify-content-center">
             <li class="nav-item">
               <a
                 class="nav-link active"
