edited contact.html, css

--- a/contact.html
+++ b/contact.html
@@ -63,22 +63,22 @@
         </div>
       </div>
     </nav>
-    <div class="contact-container container">
+    <div class="contact-container container justify-content-center">
         <div class="contact-content mt-4">
         <h1 class="work-projects">
-        <img src="images/about.png" alt="REDSKY Logo" width="200" />
+        <img src="images/about.png" alt="REDSKY Logo" width="250" />
       </h1>
-      <div class="contact-info">
-      <h3>Email contact</h3>
+      <div class="contact-info mt-5 mb-5">
+      <p class="email-contact">Email contact</p>
       <p class="ceo-contact"><a href="mailto:mats86@live.no" title="Email Mats Bjørseth">mats86@live.no</a></p>
-      <h3>Telephone number</h3>
+      <p class="telephone-contact">Telephone number</p>
       <p class="ceo-number">TBA</p> 
-      <h3>Our address</h3>
+      <p class="address">Our address</p>
       </div>
-      <div class="mt-3 mb-4">
-        <img src="images/plaza.sol.5.png" alt="Our office address" width="600">
+      <div>
+        <img src="images/plaza.sol.5.png" id="map" alt="Our office address">
       </div>
-     <p class="office-address" title="address">Plaza del Sol 5, 03012 Alicante</p>
+      <p class="office-address mt-5" title="address">Plaza del Sol 5, 03012 Alicante</p>
         <p class="office-country">Spain</p>
       </div>
     <footer>
