--- a/studio.html
+++ b/studio.html
@@ -107,7 +107,7 @@
       </div>
     </div>
     <footer>
-      <div class="social-media">
+      <div class="social-media-studio">
         <div>
           <p class="follow-us" title="Follow us">Follow us</p>
         </div>
