edited css footer

--- a/us.html
+++ b/us.html
@@ -195,7 +195,7 @@
       </div>
     </div>
     <footer>
-      <div class="social-media">
+      <div class="social-media-us">
         <div>
           <p class="follow-us" title="Follow us">Follow us</p>
         </div>
