--- a/work.html
+++ b/work.html
@@ -222,7 +222,7 @@
       </div>
     </div>
     <footer>
-      <div class="social-media">
+      <div class="social-media-work">
         <div>
           <p class="follow-us" title="Follow us">Follow us</p>
         </div>
