added profile and css on kevin.html

--- a/us.html
+++ b/us.html
@@ -153,14 +153,14 @@
         </div>
         <div class="col-md-4">
           <img src="images/avatar.png" alt="REDSKY Assistant" width="220" />
-          <p class="us-team mt-2">Noa</p>
+          <p class="us-team mt-2">Antonio</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
         </div>
         <div class="col-md-4">
           <img src="images/avatar.png" alt="REDSKY Casting Agent" width="220" />
-          <p class="us-team mt-2">Antonio</p>
+          <p class="us-team mt-2">Antonio Actor</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
@@ -176,18 +176,34 @@
         </div>
         <div class="col-md-4">
           <img
-            src="images/avatar.png"
+            src="images/kevin.jpeg"
             alt="REDSKY Sound engineer"
             width="220"
           />
           <p class="us-team mt-2">Kevin</p>
+          <a class="read-more-link" href="kevin.html" target="_blank">
+            <button type="button" class="btn btn-secondary btn-sm mb-5">
+              Read more
+            </button>
+          </a>
+        </div>
+        <div class="col-md-4">
+          <img src="images/avatar.png" alt="REDSKY Photographer" width="220" />
+          <p class="us-team">Carmen</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
         </div>
         <div class="col-md-4">
           <img src="images/avatar.png" alt="REDSKY Photographer" width="220" />
-          <p class="us-team">Carmen</p>
+          <p class="us-team">Maria Camila</p>
+          <button type="button" class="btn btn-secondary btn-sm mb-5">
+            Read more
+          </button>
+        </div>
+        <div class="col-md-4">
+          <img src="images/avatar.png" alt="REDSKY Photographer" width="220" />
+          <p class="us-team">Emilie Gonzales</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
