edited tj photo

--- a/kevin.html
+++ b/kevin.html
@@ -41,11 +41,12 @@
   <body>
     <div class="us-content-container">
       <p class="us-content">
-        Kevin is a music engineer originally from Welsh, UK. He graduated and
-        received a MA in Electronic Media at Oxford Brookes University. He has
-        worked as a lecturer in Sound Design at Worcester University for 8 years
-        as well as a guitar tutor for Yamaha for 5 years. Kevin has also
-        performed more than 5000 gigs including at Glastonbury Festival.
+        Kevin Jenkins is a music engineer originally from Welsh, UK. He
+        graduated and received a MA in Electronic Media at Oxford Brookes
+        University. He has worked as a lecturer in Sound Design at Worcester
+        University for 8 years as well as a guitar tutor for Yamaha for 5 years.
+        Kevin has also performed more than 5000 gigs including at Glastonbury
+        Festival.
       </p>
     </div>
   </body>
