added photos to kevin.html

--- a/kevin.html
+++ b/kevin.html
@@ -41,12 +41,28 @@
   <body>
     <div class="us-content-container">
       <p class="us-content">
-        Kevin Jenkins is a music engineer originally from Welsh, UK. He
+        Kevin Jenkins is a music engineer originally from Wales, UK. He
         graduated and received a MA in Electronic Media at Oxford Brookes
         University. He has worked as a lecturer in Sound Design at Worcester
         University for 8 years as well as a guitar tutor for Yamaha for 5 years.
         Kevin has also performed more than 5000 gigs including at Glastonbury
         Festival.
+      </p>
+      <img
+        class="profile-photo"
+        src="images/kevin2.jpeg"
+        alt="Kevin's photo"
+        width="300"
+      />
+      <p class="us-content text-center">
+        Kevin represents SelectaSound
+        <br />
+        <img
+          class="profile-photo"
+          src="images/selectasound.jpeg"
+          alt="SelectaSound logo"
+          width="200"
+        />
       </p>
     </div>
   </body>
