--- a/us.html
+++ b/us.html
@@ -160,7 +160,7 @@
         </div>
         <div class="col-md-4">
           <img src="images/avatar.png" alt="REDSKY Casting Agent" width="220" />
-          <p class="us-team mt-2">Antonio Actor</p>
+          <p class="us-team mt-2">Antonio</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
