--- a/us.html
+++ b/us.html
@@ -98,7 +98,7 @@
         </div>
       </div>
     </nav>
-    <div class="content">
+    <div class="us-page-content">
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
