added jay's photo

--- a/us.html
+++ b/us.html
@@ -98,7 +98,7 @@
         </div>
       </div>
     </nav>
-    <div class="us-page-content">
+    <div class="content">
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
@@ -133,11 +133,11 @@
         </div>
         <div class="col-md-4">
           <img
-            src="images/avatar.png"
+            src="images/jay.JPG"
             alt="REDSKY Web Developer/Co-founder"
             width="220"
           />
-          <p class="us-team mt-2">Jay Apirinn</p>
+          <p class="us-team mt-2">Jay Apirinya</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
