edited photo width

--- a/us.html
+++ b/us.html
@@ -194,19 +194,29 @@
             Read more
           </button>
         </div>
-        <div class="col-md-4">
-          <img src="images/avatar.png" alt="REDSKY Photographer" width="220" />
-          <p class="us-team">Maria Camila</p>
-          <button type="button" class="btn btn-secondary btn-sm mb-5">
-            Read more
-          </button>
-        </div>
-        <div class="col-md-4">
-          <img src="images/avatar.png" alt="REDSKY Photographer" width="220" />
-          <p class="us-team">Emilie Gonzales</p>
-          <button type="button" class="btn btn-secondary btn-sm mb-5">
-            Read more
-          </button>
+        <div class="row">
+          <div class="col-md-4">
+            <img
+              src="images/avatar.png"
+              alt="REDSKY Photographer"
+              width="220"
+            />
+            <p class="us-team">Maria Camila</p>
+            <button type="button" class="btn btn-secondary btn-sm mb-5">
+              Read more
+            </button>
+          </div>
+          <div class="col-md-4">
+            <img
+              src="images/avatar.png"
+              alt="REDSKY Photographer"
+              width="220"
+            />
+            <p class="us-team">Emilie Gonzales</p>
+            <button type="button" class="btn btn-secondary btn-sm mb-5">
+              Read more
+            </button>
+          </div>
         </div>
       </div>
     </div>
