--- a/us.html
+++ b/us.html
@@ -114,29 +114,21 @@
       </div>
       <div class="row">
         <div class="col-md-4">
-          <img
-            src="images/tj.jpeg"
-            alt="REDSKY ACTOR/CHOREOGRAPHER"
-            width="220"
-          />
+          <img src="images/tj.jpeg" alt="REDSKY ACTOR/CHOREOGRAPHER" />
           <p class="us-team mt-2">TJ</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
         </div>
         <div class="col-md-4">
-          <img src="images/avatar.png" alt="REDSKY COO" width="220" />
+          <img src="images/avatar.png" alt="REDSKY COO" />
           <p class="us-team mt-2">Michael</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
         </div>
         <div class="col-md-4">
-          <img
-            src="images/jay.JPG"
-            alt="REDSKY Web Developer/Co-founder"
-            width="220"
-          />
+          <img src="images/jay.JPG" alt="REDSKY Web Developer/Co-founder" />
           <p class="us-team mt-2">Jay Apirinya</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
@@ -145,21 +137,21 @@
       </div>
       <div class="row">
         <div class="col-md-4">
-          <img src="images/avatar.png" alt="REDSKY Co-writer" width="220" />
+          <img src="images/avatar.png" alt="REDSKY Co-writer" />
           <p class="us-team mt-2">Raj</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
         </div>
         <div class="col-md-4">
-          <img src="images/avatar.png" alt="REDSKY Assistant" width="220" />
+          <img src="images/avatar.png" alt="REDSKY Assistant" />
           <p class="us-team mt-2">Antonio</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
         </div>
         <div class="col-md-4">
-          <img src="images/avatar.png" alt="REDSKY Casting Agent" width="220" />
+          <img src="images/avatar.png" alt="REDSKY Casting Agent" />
           <p class="us-team mt-2">Antonio</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
@@ -168,18 +160,14 @@
       </div>
       <div class="row">
         <div class="col-md-4">
-          <img src="images/avatar.png" alt="REDSKY Actorscout" width="220" />
+          <img src="images/avatar.png" alt="REDSKY Actorscout" />
           <p class="us-team mt-2">Paul</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
         </div>
         <div class="col-md-4">
-          <img
-            src="images/kevin.jpeg"
-            alt="REDSKY Sound engineer"
-            width="220"
-          />
+          <img src="images/kevin.jpeg" alt="REDSKY Sound engineer" />
           <p class="us-team mt-2">Kevin</p>
           <a class="read-more-link" href="kevin.html" target="_blank">
             <button type="button" class="btn btn-secondary btn-sm mb-5">
@@ -188,7 +176,7 @@
           </a>
         </div>
         <div class="col-md-4">
-          <img src="images/avatar.png" alt="REDSKY Photographer" width="220" />
+          <img src="images/avatar.png" alt="REDSKY Photographer" />
           <p class="us-team">Carmen</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
@@ -196,22 +184,14 @@
         </div>
         <div class="row">
           <div class="col-md-4">
-            <img
-              src="images/avatar.png"
-              alt="REDSKY Photographer"
-              width="220"
-            />
+            <img src="images/avatar.png" alt="REDSKY Photographer" />
             <p class="us-team">Maria Camila</p>
             <button type="button" class="btn btn-secondary btn-sm mb-5">
               Read more
             </button>
           </div>
           <div class="col-md-4">
-            <img
-              src="images/avatar.png"
-              alt="REDSKY Photographer"
-              width="220"
-            />
+            <img src="images/avatar.png" alt="REDSKY Photographer" />
             <p class="us-team">Emilie Gonzales</p>
             <button type="button" class="btn btn-secondary btn-sm mb-5">
               Read more
