--- a/us.html
+++ b/us.html
@@ -102,7 +102,7 @@
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <img src="images/mats.ceo.jpeg" alt="REDSKY CEO" width="330" />
+          <img src="images/mats.ceo.jpeg" alt="REDSKY CEO" />
           <p class="us-team">CEO</p>
           <p class="us-team">Founder</p>
           <p class="us-team">Writer</p>
