--- a/us.html
+++ b/us.html
@@ -116,9 +116,11 @@
         <div class="col-md-4">
           <img src="images/tj.jpeg" alt="REDSKY ACTOR/CHOREOGRAPHER" />
           <p class="us-team mt-2">TJ</p>
-          <button type="button" class="btn btn-secondary btn-sm mb-5">
-            Read more
-          </button>
+          <a class="read-more-link" href="tj.html" target="_blank">
+            <button type="button" class="btn btn-secondary btn-sm mb-5">
+              Read more
+            </button>
+          </a>
         </div>
         <div class="col-md-4">
           <img src="images/avatar.png" alt="REDSKY COO" />
