--- a/work.html
+++ b/work.html
@@ -120,104 +120,112 @@
             Read more
           </button>
         </div>
-        <div class="col-sm-4 mb-4">
-          <img
-            src="images/bermuda.jpg"
-            class="img-fluid rounded shadow-sm p-2 border"
-            alt="Bermuda"
-          />
-          <h3 class="text-center mb-3">Bermuda</h3>
-          <button type="button" class="btn btn-secondary btn-sm">
-            Read more
-          </button>
+        <div class="row">
+          <div class="col-sm-4 mb-4">
+            <img
+              src="images/bermuda.jpg"
+              class="img-fluid rounded shadow-sm p-2 border"
+              alt="Bermuda"
+            />
+            <h3 class="text-center mb-3">Bermuda</h3>
+            <button type="button" class="btn btn-secondary btn-sm">
+              Read more
+            </button>
+          </div>
+          <div class="col-sm-4 mb-4">
+            <img
+              src="images/grace.jpg"
+              class="img-fluid rounded shadow-sm p-2 border"
+              alt="Grace"
+            />
+            <h3 class="text-center mb-3">Grace</h3>
+            <button type="button" class="btn btn-secondary btn-sm">
+              Read more
+            </button>
+          </div>
+          <div class="col-sm-4 mb-4">
+            <img
+              src="images/misunderstood.jpg"
+              class="img-fluid rounded shadow-sm p-2 border"
+              alt="Misunderstood"
+            />
+            <h3 class="text-center mb-3">Misunderstood</h3>
+            <button type="button" class="btn btn-secondary btn-sm">
+              Read more
+            </button>
+          </div>
         </div>
-        <div class="col-sm-4 mb-4">
-          <img
-            src="images/grace.jpg"
-            class="img-fluid rounded shadow-sm p-2 border"
-            alt="Grace"
-          />
-          <h3 class="text-center mb-3">Grace</h3>
-          <button type="button" class="btn btn-secondary btn-sm">
-            Read more
-          </button>
+
+        <div class="row">
+          <div class="col-sm-4 mb-4">
+            <img
+              src="images/phillipInes.jpg"
+              class="img-fluid rounded shadow-sm p-2 border"
+              alt="phillip:Ines"
+            />
+            <h3 class="text-center mb-3">phillip:Ines</h3>
+            <button type="button" class="btn btn-secondary btn-sm">
+              Read more
+            </button>
+          </div>
+          <div class="col-sm-4 mb-4">
+            <img
+              src="images/sorry.jpg"
+              class="img-fluid rounded shadow-sm p-2 border"
+              alt="SORRY"
+            />
+            <h3 class="text-center mb-3">SORRY</h3>
+            <button type="button" class="btn btn-secondary btn-sm">
+              Read more
+            </button>
+          </div>
+          <div class="col-sm-4 mb-4">
+            <img
+              src="images/the Last Man in Laos.jpg"
+              class="img-fluid rounded shadow-sm p-2 border"
+              alt="The Last Man In Laos"
+            />
+            <h3 class="text-center mb-3">The Last Man In Laos</h3>
+            <button type="button" class="btn btn-secondary btn-sm">
+              Read more
+            </button>
+          </div>
         </div>
-        <div class="col-sm-4 mb-4">
-          <img
-            src="images/misunderstood.jpg"
-            class="img-fluid rounded shadow-sm p-2 border"
-            alt="Misunderstood"
-          />
-          <h3 class="text-center mb-3">Misunderstood</h3>
-          <button type="button" class="btn btn-secondary btn-sm">
-            Read more
-          </button>
-        </div>
-        <div class="col-sm-4 mb-4">
-          <img
-            src="images/phillipInes.jpg"
-            class="img-fluid rounded shadow-sm p-2 border"
-            alt="phillip:Ines"
-          />
-          <h3 class="text-center mb-3">phillip:Ines</h3>
-          <button type="button" class="btn btn-secondary btn-sm">
-            Read more
-          </button>
-        </div>
-        <div class="col-sm-4 mb-4">
-          <img
-            src="images/sorry.jpg"
-            class="img-fluid rounded shadow-sm p-2 border"
-            alt="SORRY"
-          />
-          <h3 class="text-center mb-3">SORRY</h3>
-          <button type="button" class="btn btn-secondary btn-sm">
-            Read more
-          </button>
-        </div>
-        <div class="col-sm-4 mb-4">
-          <img
-            src="images/the Last Man in Laos.jpg"
-            class="img-fluid rounded shadow-sm p-2 border"
-            alt="The Last Man In Laos"
-          />
-          <h3 class="text-center mb-3">The Last Man In Laos</h3>
-          <button type="button" class="btn btn-secondary btn-sm">
-            Read more
-          </button>
-        </div>
-        <div class="col-sm-4 mb-4">
-          <img
-            src="images/the Long Way Home.jpg"
-            class="img-fluid rounded shadow-sm p-2 border"
-            alt="The Long Way Home"
-          />
-          <h3 class="text-center mb-3">The Long Way Home</h3>
-          <button type="button" class="btn btn-secondary btn-sm">
-            Read more
-          </button>
-        </div>
-        <div class="col-sm-4 mb-4">
-          <img
-            src="images/when are you coming home.jpg"
-            class="img-fluid rounded shadow-sm p-2 border"
-            alt="When Are You Coming Home"
-          />
-          <h3 class="text-center mb-3">When Are You Coming Home</h3>
-          <button type="button" class="btn btn-secondary btn-sm">
-            Read more
-          </button>
-        </div>
-        <div class="col-sm-4 mb-4">
-          <img
-            src="images/lollipop.jpg"
-            class="img-fluid rounded shadow-sm p-2 border"
-            alt="LOLLIPOP"
-          />
-          <h3 class="text-center mb-3">LOLLIPOP</h3>
-          <button type="button" class="btn btn-secondary btn-sm">
-            Read more
-          </button>
+
+        <div class="row">
+          <div class="col-sm-4 mb-4">
+            <img
+              src="images/the Long Way Home.jpg"
+              class="img-fluid rounded shadow-sm p-2 border"
+              alt="The Long Way Home"
+            />
+            <h3 class="text-center mb-3">The Long Way Home</h3>
+            <button type="button" class="btn btn-secondary btn-sm">
+              Read more
+            </button>
+          </div>
+          <div class="col-sm-4 mb-4">
+            <img
+              src="images/when are you coming home.jpg"
+              class="img-fluid rounded shadow-sm p-2 border"
+              alt="When Are You Coming Home"
+            />
+            <h3 class="text-center mb-3">When Are You Coming Home</h3>
+            <button type="button" class="btn btn-secondary btn-sm">
+              Read more
+            </button>
+          </div>
+          <div class="col-sm-4 mb-4">
+            <img
+              src="images/lollipop.jpg"
+              class="img-fluid rounded shadow-sm p-2 border"
+              alt="LOLLIPOP"
+            />
+            <h3 class="text-center mb-3">LOLLIPOP</h3>
+            <button type="button" class="btn btn-secondary btn-sm">
+              Read more
+            </button>
+          </div>
         </div>
       </div>
     </div>
