edited us photos

--- a/us.html
+++ b/us.html
@@ -132,9 +132,11 @@
         <div class="col-md-4">
           <img src="images/jay.JPG" alt="REDSKY Web Developer/Co-founder" />
           <p class="us-team mt-2">Jay Apirinya</p>
-          <button type="button" class="btn btn-secondary btn-sm mb-5">
-            Read more
-          </button>
+          <a class="read-more-link" href="jay.html" target="_blank">
+            <button type="button" class="btn btn-secondary btn-sm mb-5">
+              Read more
+            </button>
+          </a>
         </div>
       </div>
       <div class="row">
