--- a/us.html
+++ b/us.html
@@ -102,8 +102,8 @@
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <img src="images/mats.ceo.jpeg" alt="REDSKY CEO" />
-          <p class="us-team">CEO</p>
+          <img src="images/mats2.png" alt="REDSKY CEO" />
+          <p class="us-team mt-4">CEO</p>
           <p class="us-team">Founder</p>
           <p class="us-team">Writer</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
@@ -114,7 +114,7 @@
       </div>
       <div class="row">
         <div class="col-md-4">
-          <img src="images/tj.jpeg" alt="REDSKY ACTOR/CHOREOGRAPHER" />
+          <img src="images/tj.png" alt="REDSKY ACTOR/CHOREOGRAPHER" />
           <p class="us-team mt-2">TJ</p>
           <a class="read-more-link" href="tj.html" target="_blank">
             <button type="button" class="btn btn-secondary btn-sm mb-5">
@@ -130,7 +130,7 @@
           </button>
         </div>
         <div class="col-md-4">
-          <img src="images/jay.JPG" alt="REDSKY Web Developer/Co-founder" />
+          <img src="images/jay.png" alt="REDSKY Web Developer/Co-founder" />
           <p class="us-team mt-2">Jay Apirinya</p>
           <a class="read-more-link" href="jay.html" target="_blank">
             <button type="button" class="btn btn-secondary btn-sm mb-5">
@@ -181,7 +181,7 @@
         </div>
         <div class="col-md-4">
           <img src="images/avatar.png" alt="REDSKY Photographer" />
-          <p class="us-team">Carmen</p>
+          <p class="us-team mt-2">Carmen</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
@@ -189,14 +189,14 @@
         <div class="row">
           <div class="col-md-4">
             <img src="images/avatar.png" alt="REDSKY Photographer" />
-            <p class="us-team">Maria Camila</p>
+            <p class="us-team mt-2">Maria Camila</p>
             <button type="button" class="btn btn-secondary btn-sm mb-5">
               Read more
             </button>
           </div>
           <div class="col-md-4">
             <img src="images/avatar.png" alt="REDSKY Photographer" />
-            <p class="us-team">Emilie Gonzales</p>
+            <p class="us-team mt-2">Emilie Gonzales</p>
             <button type="button" class="btn btn-secondary btn-sm mb-5">
               Read more
             </button>
