edited jay.html, css, work.html

--- a/jay.html
+++ b/jay.html
@@ -48,10 +48,10 @@
         and arts.
         <br />
         She has many interests and hobbies, and one of her interests revolves
-        around film and acting. She would always participate in school plays
-        during her childhood and always enjoyed playing a character. Apart from
-        film and acting, she loves learning new skills, especially in technology
-        and arts.
+        around film and acting. She always participated in school plays during
+        her childhood and always enjoyed playing a character. Apart from film
+        and acting, she loves learning new skills, especially in technology and
+        arts.
       </p>
       <img class="profile-photo" src="" alt="TJ's photo" width="300" />
     </div>
