--- a/us.html
+++ b/us.html
@@ -100,8 +100,8 @@
     </nav>
     <div class="content">
       <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8">
           <img src="images/mats2.png" alt="REDSKY CEO" />
           <p class="us-team mt-4">CEO</p>
           <p class="us-team">Founder</p>
@@ -110,7 +110,7 @@
             Read more
           </button>
         </div>
-        <div class="col-md-2"></div>
+        <div class="col-lg-2"></div>
       </div>
       <div class="row">
         <div class="col-md-4">
