edited kevins photo

--- a/us.html
+++ b/us.html
@@ -171,7 +171,7 @@
           </button>
         </div>
         <div class="col-lg-4">
-          <img src="images/kevin.jpeg" alt="REDSKY Sound engineer" />
+          <img src="images/kevin.png" alt="REDSKY Sound engineer" />
           <p class="us-team mt-2">Kevin</p>
           <a class="read-more-link" href="kevin.html" target="_blank">
             <button type="button" class="btn btn-secondary btn-sm mb-5">
