--- a/work.html
+++ b/work.html
@@ -87,7 +87,7 @@
     </nav>
     <div class="content-container container text-center">
       <div class="row" id="work-images">
-        <div class="col-sm-4 mb-4">
+        <div class="col-lg-4 mb-4">
           <img
             src="images/tangles senses_short.jpg"
             class="img-fluid rounded shadow-sm p-2 border"
@@ -98,7 +98,7 @@
             Read more
           </button>
         </div>
-        <div class="col-sm-4 mb-4">
+        <div class="col-lg-4 mb-4">
           <img
             src="images/a_walk_in_the_park.jpg"
             class="img-fluid rounded shadow-sm p-2 border"
@@ -109,7 +109,7 @@
             Read more
           </button>
         </div>
-        <div class="col-sm-4 mb-4">
+        <div class="col-lg-4 mb-4">
           <img
             src="images/amsterdam.jpg"
             class="img-fluid rounded shadow-sm p-2 border"
@@ -122,7 +122,7 @@
         </div>
       </div>
       <div class="row" id="work-images">
-        <div class="col-sm-4 mb-4">
+        <div class="col-lg-4 mb-4">
           <img
             src="images/bermuda.jpg"
             class="img-fluid rounded shadow-sm p-2 border"
@@ -133,7 +133,7 @@
             Read more
           </button>
         </div>
-        <div class="col-sm-4 mb-4">
+        <div class="col-lg-4 mb-4">
           <img
             src="images/grace.jpg"
             class="img-fluid rounded shadow-sm p-2 border"
@@ -144,7 +144,7 @@
             Read more
           </button>
         </div>
-        <div class="col-sm-4 mb-4">
+        <div class="col-lg-4 mb-4">
           <img
             src="images/misunderstood.jpg"
             class="img-fluid rounded shadow-sm p-2 border"
@@ -158,7 +158,7 @@
       </div>
 
       <div class="row" id="work-images">
-        <div class="col-sm-4 mb-4">
+        <div class="col-lg-4 mb-4">
           <img
             src="images/phillipInes.jpg"
             class="img-fluid rounded shadow-sm p-2 border"
@@ -169,7 +169,7 @@
             Read more
           </button>
         </div>
-        <div class="col-sm-4 mb-4">
+        <div class="col-lg-4 mb-4">
           <img
             src="images/sorry.jpg"
             class="img-fluid rounded shadow-sm p-2 border"
@@ -180,7 +180,7 @@
             Read more
           </button>
         </div>
-        <div class="col-sm-4 mb-4">
+        <div class="col-lg-4 mb-4">
           <img
             src="images/the Last Man in Laos.jpg"
             class="img-fluid rounded shadow-sm p-2 border"
@@ -194,7 +194,7 @@
       </div>
 
       <div class="row" id="work-images">
-        <div class="col-sm-4 mb-4">
+        <div class="col-lg-4 mb-4">
           <img
             src="images/the Long Way Home.jpg"
             class="img-fluid rounded shadow-sm p-2 border"
@@ -205,7 +205,7 @@
             Read more
           </button>
         </div>
-        <div class="col-sm-4 mb-4">
+        <div class="col-lg-4 mb-4">
           <img
             src="images/when are you coming home.jpg"
             class="img-fluid rounded shadow-sm p-2 border"
@@ -216,7 +216,7 @@
             Read more
           </button>
         </div>
-        <div class="col-sm-4 mb-4">
+        <div class="col-lg-4 mb-4">
           <img
             src="images/lollipop.jpg"
             class="img-fluid rounded shadow-sm p-2 border"
