--- a/us.html
+++ b/us.html
@@ -106,6 +106,8 @@
           <p class="us-team mt-4">CEO</p>
           <p class="us-team">Founder</p>
           <p class="us-team">Writer</p>
+          <p class="us-team">Director</p>
+          <p class="us-team">Producer</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
