--- a/tj.html
+++ b/tj.html
@@ -43,12 +43,10 @@
       <p class="us-content">
         TJ or Tidjani is an actor and a film, theatre producer. He was the
         president for Culture Sports Association in Stockholm during 1986 -
-        1992.
-        <br />
-        He was starred in the 1979 version of Nosferatu the Vampyre. In 1994, he
-        was a dance choreographer for Swedish Film Institute in Stockholm. Tj is
-        involved in the Human Rights and can speak chinese, french, english,
-        arabic, swedish, norwegian, spanish and italian.
+        1992. He was starred in the 1979 version of Nosferatu the Vampyre. In
+        1994, he was a dance choreographer for Swedish Film Institute in
+        Stockholm. Tj is involved in the Human Rights and can speak chinese,
+        french, english, arabic, swedish, norwegian, spanish and italian.
       </p>
       <img class="profile-photo" src="" alt="TJ's photo" width="300" />
     </div>
