--- a/jay.html
+++ b/jay.html
@@ -45,13 +45,11 @@
         from Bangkok, Thailand, she worked within the Hotel Industry for more
         than 8 years. After leaving Thailand in 2019, she pursued a career in
         the Fashion Industry because she has always had a passion for fashion
+        and arts. She has many interests and hobbies, and one of her interests
+        revolves around film and acting. She always participated in school plays
+        during her childhood and always enjoyed playing a character. Apart from
+        film and acting, she loves learning new skills, especially in technology
         and arts.
-        <br />
-        She has many interests and hobbies, and one of her interests revolves
-        around film and acting. She always participated in school plays during
-        her childhood and always enjoyed playing a character. Apart from film
-        and acting, she loves learning new skills, especially in technology and
-        arts.
       </p>
       <img class="profile-photo" src="" alt="TJ's photo" width="300" />
     </div>
