--- a/us.html
+++ b/us.html
@@ -82,6 +82,9 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="" title="Casting at REDSKY">Casting</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="us.html" title="About REDSKY Associates"
                 >Us</a
               >
