--- a/work.html
+++ b/work.html
@@ -68,6 +68,10 @@
                 >Our Studio</a
               >
             </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="" title="Casting at REDSKY">Casting</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="us.html" title="About REDSKY Associates"
                 >Us</a
