added avatar in us.html

--- a/us.html
+++ b/us.html
@@ -206,6 +206,13 @@
               Read more
             </button>
           </div>
+          <div class="col-lg-4">
+            <img src="images/avatar.png" alt="REDSKY Photographer" />
+            <p class="us-team mt-2">BB</p>
+            <button type="button" class="btn btn-secondary btn-sm mb-5">
+              Read more
+            </button>
+          </div>
         </div>
       </div>
     </div>
