--- a/about.html
+++ b/about.html
@@ -53,6 +53,9 @@
               <li class="nav-item">
               <a class="nav-link" href="studio.html" title="Our Studio">Our Studio</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="" title="Casting at REDSKY">Casting</a>
+            </li>
              <li class="nav-item">
               <a class="nav-link" href="us.html" title="About REDSKY Associates"
                 >Us</a
